<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/food"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/foodx"
            app:civ_border_color="@color/FOOD"
            app:civ_border_width="2dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
        />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/beverage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/beverage"
            app:civ_border_color="@color/BEVERAGE"
            app:civ_border_width="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_weight="1"/>


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/kids"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/pencil"
            app:civ_border_color="@color/KIDS"
            app:civ_border_width="2dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            />


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/home"
            app:civ_border_color="@color/HOME"
            app:civ_border_width="2dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/clothing"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/shirts"
            app:civ_border_color="@color/CLOTHING"
            app:civ_border_width="2dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            />


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/others"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/etc"
            app:civ_border_color="@color/OTHER"
            app:civ_border_width="2dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            />


    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        >


    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>