...
    <string name="take_barcode_picture">Take Barcode Picture</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="product_prompt">Adding to the basket..</string>
    <string name="title_activity_main">Happy Grocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jack Sparrow</string>
    <string name="nav_header_subtitle">jack_pirate@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">Frame your barcode!</string>
...
    <string name="category2">Beverage</string>
    <string name="category3">Kids</string>
    <string name="category4">Home</string>
    <string name="category5">Clothing</string>

    <!-- NAMES OF MENU ITEMS -->
    <string name="shopping_cart">Cart</string>

    <!--SERVER URL -->
    <string name="server_url">"https://my-json-server.typicode.com/AlessandroCaste/HappyGroceryDB/products?barcode="</string>
    <!-- <string name="default_web_client_id">636017224538-hdchojmaea1l7tr0d90qocv6ttovl6hf.apps.googleusercontent.com</string> -->

    <!-- SERVICE STRINGS -->
...
    <string name="Kids_Title">Kids and Stationery</string>
    <string name="Home_Title">Home needs</string>
    <string name="Clothing_Title">Clothing</string>
    <string name="Other_Title">Other Categories</string>

    <!-- BUTTON OPTIONS -->
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>

    <!-- Activity Texts and the like -->
    <string name="Welcome">Welcome!</string>
    <string name="HappyGrocery">Happy Grocery</string>

...
